# notebooklm_sdk

./: .gitignore  GEMINI.md  README.md  gemini-extension.json  pyproject.toml
commands/: create_notebook.sh  get_document_status.sh
commands/notebooklm/: create.toml  status.toml  upload.toml
notebooklm_sdk/: cli.py  client.py  server.py
skills/: create_notebook.md  get_document_status.md  get_document_status.py  upload_document.md  upload_document.py
tests/: test_sdk.py
